--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
+server.port=8080
+server.servlet.context-path=/demo
+
 spring.datasource.url= jdbc:postgresql://localhost:5432/demo
 spring.datasource.username= postgres
 spring.datasource.password= samet
-
+spring.application.name=demo
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
