add data sql management spring boot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,15 @@ server.servlet.context-path=/demo
 spring.datasource.url= jdbc:postgresql://localhost:5432/demo
 spring.datasource.username= postgres
 spring.datasource.password= samet
+spring.sql.init.mode=always
 spring.application.name=demo
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
-# Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto= update
+#create – Hibernate first drops existing tables and then creates new tables.
+#update – The object model created based on the mappings (annotations or XML) is compared with the existing schema, and then Hibernate updates the schema according to the diff. It never deletes the existing tables or columns even if they are no longer required by the application.
+#create-drop – similar to create, with the addition that Hibernate will drop the database after all operations are completed; typically used for unit testing
+#validate – Hibernate only validates whether the tables and columns exist; otherwise, it throws an exception.
+#none – This value effectively turns off the DDL generation.
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
